# fazle-llm-budget-dashboard

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml
.streamlit/: config.toml
app/: audit_panel.py  charts.py  config.py  langfuse_client.py  main.py  redis_aggregator.py  schemas.py
app/lua/: get_timeline.lua  record_event.lua
scripts/: seed_demo_data.py
src/: config.py  langfuse_client.py  schemas.py
