[project]
name = "fazle-llm-budget-dashboard"
version = "0.1.0"
description = "Real-time LLM cost & routing intelligence dashboard — Langfuse + Redis + Plotly + Streamlit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langfuse>=4.13.0",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]